Updates for working better in WSL2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,4 @@ set -g default-terminal "screen-256color"
 #tmux set-hook window-pane-changed refresh-client
 #tmux set-hook session-window-changed refresh-client
 #tmux set-hook session-changed refresh-client
+set -g mouse on
