--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,13 +33,49 @@ set-option -g history-limit 5000
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-	bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-	bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-	bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-	bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-	bind-key -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
-set -g default-terminal "screen-256color"
+        bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+        bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+        bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+        bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+        bind-key -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
+
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 #tmux set-hook window-pane-changed refresh-client
 #tmux set-hook session-window-changed refresh-client
 #tmux set-hook session-changed refresh-client
 set -g mouse on
+
+#### STATUSBAR
+run-shell 'powerline-config tmux setup'
+
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-style fg=yellow,bg=black #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=black #base02
+set-option -g pane-active-border-style fg=brightgreen #base01
+
+# message text
+set-option -g message-style fg=brightred,bg=black #orange and base01
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
